name:                milib
version:             0.2.0.0
synopsis:            milib
description:         milib
homepage:            https://github.com/mkut/milib_haskell#readme
license:             BSD3
license-file:        LICENSE
author:              mkut
maintainer:          mkut.at@gmail.com
copyright:           2016 mkut
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Milib.Algorithm.Dijkstra
                     , Milib.Contest
                     , Milib.Data.Graph.Grid
                     , Milib.Data.Heap.ST
                     , Milib.Data.Map.ST
                     , Milib.Data.Set.ST
                     , Milib.Data.STRef
                     , Milib.Geometry
                     , Milib.IO
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , fgl
                     , parsec
                     , transformers
  default-language:    Haskell2010

test-suite milib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , milib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/milib
